<resources>
    <string name="address">Address</string>
    <string name="app_name">Dive Scanner</string>
    <string name="billingActivityTitle">Billing details</string>
    <string name="btnBookNow">BOOK NOW</string>
    <string name="btnRetry">RETRY</string>
    <string name="conditionsActivityTitle">Conditions</string>
    <string name="cardNumber">Card number</string>
    <string name="cardHolderName">Name on card</string>
    <string name="cardMonth">Month</string>
    <string name="cardYear">Year</string>
    <string name="cardCCVCode">Year</string>
    <string name="depthPlace">DEPTH</string>
    <string name="placeOrder">PAY</string>
    <string name="noteConditions">Note</string>
    <string name="conditionsTotal">TOTAL</string>
    <string name="selectCity">Select a city</string>
    <string name="divingLevel">Select your diving level</string>
    <string name="bookingSuccessfull">Booking successfully completed</string>
    <string name="description">Description</string>
    <string name="userName">NAME</string>
    <string name="rating">Rating</string>
    <string name="from">FROM</string>
    <string name="explore">EXPLORE</string>
    <string name="optionTitle">TITLE</string>
    <string name="optionDuration">Duration</string>
    <string name="startTime">Start time</string>
    <string name="btnChoseOption">CHOSE THIS OPTION</string>
    <string name="offers">Offers</string>
    <string name="pleaseWait">Please wait</string>
    <string name="errorConnection">No internet connection</string>
    <string name="choseLicense">Please choose your license</string>
    <string name="choseCity">Please choose city!</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="postalCode">Postal Code</string>
    <string name="city">City</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="sealifePlace">Sea life</string>
    <string name="details_reviews">reviews</string>
    <string name="details_depth">Max depth</string>
    <string name="details_visibility">Visibility</string>
    <string name="details_currents">Current</string>
    <string name="details_level">Diver level</string>
    <string name="details_description">Description</string>
    <string name="details_access">Access</string>
    <string name="details_btn_book_now">Contact Dive Centers</string>
    <string name="server_client_id">200652897389-onnv3dgvcnf7bj8dku3psjntif6hiua0.apps.googleusercontent.comm</string>
    <string name="twitter_consumer_key">tT7PhwjwXb8dEXbhQzI529VR4</string>
    <string name="twitter_consumer_secret">C4wijpAOBWWwUVsmtyoMEhWUQD5P6BFulUDTVQGQmrJI32BlaT</string>
    <string name="feedback_text">Do you want to leave feedback on DDScanner?</string>
    <string name="feedback_title">Gongratulations!</string>
    <string name="filter_only_best_rated">Only best-rated</string>
    <string name="filters_filters">Filters</string>
    <string name="btn_save">SAVE</string>
    <string name="object_characteristic">Object</string>
    <string name="photos_title">Photos</string>
    <string name="btn_yes">YES</string>
    <string name="btn_no">NO</string>
    <string name="the_information_is_valid">Is the information valid?</string>
    <string name="tap_on_star_to_review">Tap to rate this dive spot</string>
    <string name="diveSpot">Dive Spot</string>
    <string name="people">People</string>
    <string name="add_photos">Add photos</string>
    <string name="photos">Photos</string>
    <string name="tap_a_flag_to_rate">Tap a flag to rate</string>
    <string name="add_sealife">Add Sea life</string>
    <string name="name">Name</string>
    <string name="habitat">Habitat</string>
    <string name="distribution">Distribution</string>
    <string name="add_photo">Add photo</string>
    <string name="length">Length</string>
    <string name="weight">Weight</string>
    <string name="depth">Depth</string>
    <string name="sc_name">Sc Name</string>
    <string name="order">Order</string>
    <string name="scclass">Class</string>
    <string name="reviews">Reviews</string>
    <string name="thanks_for_your_answer">Thanks for your answer!</string>
    <string name="dive_spots">DIVE SPOTS</string>
    <string name="check_in">CHECK IN</string>
    <string name="added">ADDED</string>
    <string name="edited">Edited</string>
    <string name="edit">EDIT</string>
    <string name="max_depth_meters">Max depth (meters)</string>
    <string name="location">Location</string>
    <string name="add_manually">ADD MANUALLY</string>
    <string name="sealife">Sea Life</string>
    <string name="edit_dive_spot">Edit Dive Spot</string>
    <string name="edit_profile">Edit profile</string>
    <string name="created">Created</string>
    <string name="edited_low">Edited</string>
    <string name="favourites">Favorites</string>
    <string name="full_name">Full name</string>
    <string name="about">About</string>
    <string name="write_review">Write review</string>
    <string name="show_all">Show all reviews (%1$s)</string>
    <string name="visibility_pattern">%1$s - %2$s meters</string>
    <string name="peoples_checked_in_here"> people checked in here</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="cancel">cancel</string>
    <string name="question_edit_dive_spot">Do you want to edit this dive spot?</string>
    <string name="no_just_vote_answer">No, just vote</string>
    <string name="dialog_title_check_in">Checked in</string>
    <string name="dialog_check_in_content">This dive spot will be shown in your profile</string>
    <string name="dialog_check_in_no">OK</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="user_made_checkin">%1$s has also checked in at %2$s</string>
    <string name="divespot_was_changed">%1$s has been changed</string>
    <string name="new_dive_spothas_been_added_near">New dive spot was added - %1$s</string>
    <string name="user_dislike_your_review">%1$s disliked your review %2$s</string>
    <string name="user_liked_your_review">%1$s liked your review %2$s</string>
    <string name="your_changes_accepted">You changes on the %1$s have been accepted</string>
    <string name="foreign_user_likes_main_text">%1$s liked your review «%2$s»</string>
    <string name="foreign_user_dislikes_main_text">%1$s disliked your review «%2$s»</string>
    <string name="foreign_user_like_by">Liked by %1$s</string>
    <string name="foreign_user_dislike_by">Disliked by %1$s</string>
    <string name="foreign_user_activity_open_on">Ope on %1$s</string>
    <string name="font_roboto_medium">sans-serif</string>
    <string name="filter_object">Object</string>
    <string name="filter_label">Level</string>
    <string name="creator">Creator</string>
    <string name="editor">Editor</string>
    <string name="error_turn_on_location_provider">Please turn on GPS. You can find this option in your device settings</string>
    <string name="error_no_location_permission">Please give the app permission to use your location. This will be used for "checkin" and "show my location" functionality</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="open_settings">OPEN SETTINGS</string>
    <string name="grant_permission">GRANT PERMISSION</string>
    <string name="contact_dive_centers">Book a dive</string>
    <string name="dive_center">Dive Center</string>
    <string name="you_must_login_to_add_divespot">You must login to add divespot</string>
    <string name="login_or_sign_up">Login or Sign Up</string>
    <string name="profile_need_to_login">Login to view profile</string>
    <string name="notifications_need_to_login">Login to view notifications</string>
    <string name="e_mail">E-mail</string>
    <string name="search_sealife">Search sea life</string>
    <string name="favorites">Favorites</string>
    <string name="checkin">Check-ins</string>
    <string name="added_ds">Created</string>
    <string name="edited_ds">Edited</string>
    <string name="toast_server_error">Failed to reach DDScanner service. Please try again later</string>
    <string name="sealife_already_added">It has already been added</string>
    <string name="please_connect_to_a_network_to_continue">Please connect to a network to continue</string>
    <string name="refresh">REFRESH</string>
    <string name="new_divespot">New Dive Spot</string>
    <string name="pick_location">Pick location</string>
    <string name="search">Search</string>
    <string name="dive_spot">Dive Spot</string>
    <string name="my_current_location">My current location</string>
    <string name="no_results">No results</string>
    <string name="privacy_policy_first_part">Your data is very important to us. Accordingly, we have developed this Policy in order to explain you how we collect, disclose and use personal information. The following outlines our privacy policy.</string>
    <string name="privacy_policy_part_2">We will identify the purposes for which personal information is being collected.</string>
    <string name="privacy_policy_part_3">We will collect and use personal information with the objective of fulfilling those purposes specified by us and for other compatible purposes, unless we obtain the consent of the individual or as required by law.</string>
    <string name="privacy_policy_part_4">We will only retain personal information as long as necessary for the fulfillment of those purposes specified by us.</string>
    <string name="privacy_policy_part_5">We will collect personal information by lawful and fair means and, where appropriate, with the knowledge or consent of the individual.</string>
    <string name="privacy_policy_part_6">Personal data should be relevant to the purposes for which it is used and should be accurate, complete, and up-to-date.</string>
    <string name="privacy_policy_part_7">We will protect personal information by reasonable security safeguards against loss or theft, as well as unauthorized access, disclosure, copying, use or modification.</string>
    <string name="privacy_policy_part_8">We will provide customers with all information about our policies and practices relating to the management of personal information.</string>
    <string name="privacy_policy_part_9">The media content that you provide is not considered to be personal information. So under these terms it appears to be the application\'s property that can be used inside the application.</string>
    <string name="privacy_policy_part_10">We are committed to following all these principles in order to ensure that personal information is protected.</string>
    <string name="show_privacy_policy">By signing up, you agree to the Terms of Service and Privacy Policy</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="deep_dive_scanner">Deep Dive Scanner</string>
    <string name="new_dive_spot">NEW DIVE SPOT</string>
    <string name="open_on_facebook">Open on Facebook</string>
    <string name="open_on_twitter">Open on twitter</string>
    <string name="open_on_google_plus">Open on Google+</string>
    <string name="input_name_hint">John Doe</string>
    <string name="your_name">Your name</string>
    <string name="your_email">Your email</string>
    <string name="email_example_hint">example@gmail.com</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="message">Message</string>
    <string name="message_input_example_hnt">I want to book a dive trip to Racha Islands on 7 November for me and my friend.</string>
    <string name="initiary">Itinerary</string>
    <string name="book_now_btn">INQUIRY</string>
    <string name="inclusions">Inclusions</string>
    <string name="extra_price">Extra price</string>
    <string name="fee">Fee</string>
</resources>